--- a/gui/qml.qrc
+++ b/gui/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>Button.qml</file>
         <file>FormatInput.qml</file>
+        <file>error.qml</file>
     </qresource>
 </RCC>
